# cq-cam

./: .coveragerc  .gitignore  .readthedocs.yaml  AUTHORS  CONTRIBUTING.md  README.md  base.py  build-docs.sh  environment.yml  operations.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  sonar-project.properties  utils.py  visualize.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  sonar.yml
cq_cam/: __init__.py  command.py  common.py  demo.py  fluent.py  job.py  routers.py  test.py  tmp.txt  utils.py  visualize.py
cq_cam/commands/: base_command.py  command.py  util_command.py
cq_cam/job/: job.py
cq_cam/operations/: base_operation.py  drill.py  mixin_operation.py  op3d.py  pocket.py  pocket2d.py  profile.py  strategy.py  tabs.py
cq_cam/tests/: test_gcode.py  test_path_utils.py  test_pocket.py  test_routers.py  test_utils.py
cq_cam/utils/: linked_polygon.py  occt_clipper.py  path_utils.py  utils.py
doc/: algorithms.rst  classreference.rst  conf.py  index.rst  installation.rst  operations.rst  quickstart.rst
docs/: .buildinfo  algorithms.html  classreference.html  cq_cam.html  genindex.html  index.html  installation.html  objects.inv  operations.html  quickstart.html  search.html  search.js  searchindex.js
docs/.doctrees/: algorithms.doctree  classreference.doctree  environment.pickle  index.doctree  installation.doctree  operations.doctree  quickstart.doctree
docs/_modules/: index.html
docs/_sources/: classreference.rst.txt  installation.rst.txt  operations.rst.txt
docs/_static/: tables.css  vtk.js
docs/cq_cam/: commands.html  job.html  operations.html  utils.html  visualize.html
examples/: demo.py  fluent_drill.py  fluent_op3d.py  fluent_pocket.py  fluent_profile.py
tests/: test_base_command.py  test_base_operation.py  test_profile.py  test_utils.py
(+69 files in other folders)
