[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "setuptools-git-versioning<2"
]
build-backend = "setuptools.build_meta"

[project]
name = "cq-cam"
authors = [
    {name = "Matti Eiden", email = "snaipperi@gmail.com"},
]
description = "Cadquery CAM"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["data", "mapping"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/voneiden/cq-cam/issues/"
"Documentation" = "https://github.com/voneiden/cq-cam/"
"Source Code" = "https://github.com/voneiden/cq-cam/"

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.post{ccount}"


[pytest]
addopts = "-p no:cacheprovider"