[metadata]
name = cq-cam
author = Matti Eiden
author-email = snaipperi@gmail.com
summary = Extend CadQuery with CAM capabilities
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/voneiden/cq-cam/
project_urls =
    Bug Tracker = https://github.com/voneiden/cq-cam/issues/
    Documentation = https://github.com/voneiden/cq-cam/
    Source Code = https://github.com/voneiden/cq-cam/
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Manufacturing
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    cq_cam